--- a/roles/core/vars/main.yml
+++ b/roles/core/vars/main.yml
@@ -49,12 +49,6 @@ mount_paths:
   - /mnt/galaxyData
   - /opt/sge
 
-tar_paths: # shared by worker and master, but master also needs a nginx and
-            #proftpd path. FIXME vars for both worker and master
-            # FIXME does worker really need this? I thought it would be
-            # installed in /opt/sge
-  - /opt/galaxy/pkg/ge6.2u5
-
 master_ip: 10.0.0.101
 local_pypi_mirror: http://{{ master_ip }}/pypi/simple/
 local_source_mirror: http://{{ master_ip }}/source
@@ -63,3 +57,5 @@ xsd_package: xsd_3.3.0-1_amd64.deb
 xerces_package: xerces-c-3.1.1.tar.gz
 xerces_directory: xerces-c-3.1.1
 h5py_package: h5py-2.2.0
+
+sge_root: /opt/sge/
