Removed sge_root var from master vars since worker also needs to know

--- a/adapt_cluster_deployment_playbook.yml
+++ b/adapt_cluster_deployment_playbook.yml
@@ -29,6 +29,7 @@
 - hosts: master_private
   vars_files:
     - roles/master/vars/tools.yml
+    - roles/core/vars/main.yml
   sudo: true
   roles:
   - master
