--- a/roles/master_preparation/tasks/main.yml
+++ b/roles/master_preparation/tasks/main.yml
@@ -27,16 +27,16 @@
   get_url: url={{xerces_location}}/{{xerces_package}} dest=/mnt/mirrors/source/{{ xerces_package }}
 - name: Downloading source of h5py
   get_url: url={{ h5py_location }}/{{ h5py_package }}.tar.gz dest=/mnt/mirrors/source/{{ h5py_package }}.tar.gz
-#
-#
-#- name: Install pypi mirror downloader bandersnatch
-#  pip: name=bandersnatch state=present virtualenv=/home/admin/virtenvs/pypi_mirror
-#- name: Creating pypi mirror path
-#  file: path=/mnt/mirrors/pypimirror state=directory
-#- name: Installing bandersnatch.conf
-#  copy: src=bandersnatch.conf dest=/etc/bandersnatch.conf  
-#- name: Build PyPI mirror
-#  script: pypimirror_builder.sh
+
+
+- name: Install pypi mirror downloader bandersnatch
+  pip: name=bandersnatch state=present virtualenv=/home/admin/virtenvs/pypi_mirror
+- name: Creating pypi mirror path
+  file: path=/mnt/mirrors/pypimirror state=directory
+- name: Installing bandersnatch.conf
+  copy: src=bandersnatch.conf dest=/etc/bandersnatch.conf  
+- name: Build PyPI mirror
+  script: pypimirror_builder.sh
 
 - name: Getting nginx source
   command: wget ${nginx_location}/${nginx_package}.tar.gz chdir=/tmp
