--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -28,6 +28,18 @@
   file: path=/opt/sge/ state=directory owner=sgeadmin group=sgeadmin recurse=yes
 - name: Create sge config file from template
   template: src=sge_install_template.j2 dest=/opt/sge/sge_config.conf owner=sgeadmin group=sgeadmin
+- name: Create parallel environment files
+  copy: src={{ item }} dest=/home/galaxy/{{ item }} owner=sgeadmin group=sgeadmin mode=644
+  with_items:
+    - smp.conf
+    - mpi.conf
+- name: Create all.q file
+  copy: src={{ item }} dest={{ sge_root }}/all.q.conf owner=sgeadmin group=sgeadmin
+- name: Creating SGE request files
+  template: src=sge_request.j2 dest=/home/{{ item }}/.sge_request owner={{ item }} group={{ item }} mode=644
+  with_items:
+    - galaxy
+    - admin
 
 - name: Configure PostgreSQL
   lineinfile: dest=/etc/bash.bashrc line="export PATH=/usr/lib/postgresql/{{ postgres_version }}/bin:$PATH" state=present regexp="export PATH=/usr/lib/postgresql/{{ postgres_version }}/bin"
@@ -58,12 +70,12 @@
   command: stow proftpd chdir=/opt
 
 - name: Create mount dir for galaxy tools
-  file: path=/mnt/galaxy/tools state=directory
+  file: path={{ tool_path }} state=directory
 # Install tools
 - include: tools.yml
 
 - name: Fix ownership of all tools
-  file: path={{ tool_install_dir }} owner=galaxy group=galaxy recurse=yes state=directory
+  file: path={{ tool_path }} owner=galaxy group=galaxy recurse=yes state=directory
 
 # Install galaxy
 # FIXME ssh may ask before remote host contact?
@@ -75,4 +87,4 @@
 - name: Add SGE to NFS exports template
   lineinfile: dest=/etc/exports state=present regexp="/opt/sge" line="/opt/sge    *(rw,sync,no_root_squash,subtree_check,no_wdelay)"
 - name: Add tools to NFS exports template
-  lineinfile: dest=/etc/exports regexp="/mnt/galaxy/tools" state=present line="/mnt/galaxy/tools    *(rw,sync,no_root_squash,no_subtree_check)"
+  lineinfile: dest=/etc/exports regexp="{{ tool_path }}" state=present line="{{ tool_path }}    *(rw,sync,no_root_squash,no_subtree_check)"
