--- a/roles/master/vars/main.yml
+++ b/roles/master/vars/main.yml
@@ -11,7 +11,7 @@ sge_packages:
  - ge-6.2u5-bin-lx24-amd64.tar.gz
 
 postgres_version: 9.1
-
+postgres_home: /usr/lib/postgresql/{{ postgres_version }}/bin
 proftpd_pkg: proftpd-1.3.4a
 proftpd_install_dir: /opt/proftpd
 
