Bug, vars starting with curly brace should be in parenthesis

--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -46,9 +46,9 @@ tool_python_libraries:
  - simplejson
 
 mount_paths:
-  - {{ tool_path }}
-  - {{ data_path }}
-  - {{ sge_root }}
+  - "{{ tool_path }}"
+  - "{{ data_path }}"
+  - "{{ sge_root }}"
 
 local_pypi_mirror: http://{{ master_ip }}/pypi/simple/
 local_source_mirror: http://{{ master_ip }}/source
