--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -17,22 +17,42 @@
   file: path={{ item }} state=directory
   with_flattened: mount_paths
 
-# SGE configuration
-- name: Allow incoming traffic on port 536 and 537
-  command: iptables -A INPUT -p tcp -i {{ private_interface }} --dport {{ item }} -j ACCEPT
-  with_items:
-    - 536
-    - 537
-- name: Save iptables config
-  command: iptables-save
-- name: Create libc softlink for SGE
-  file: src=/lib/x86_64-linux-gnu/libc-2.15.so dest=/lib64/libc.so.6 state=link
-- name: Remove certain lines in /etc/hosts
-  lineinfile: dest=/etc/hosts regexp="^127.0.1." state=absent
-- name: Add sge_root to /etc/profile
-  lineinfile: dest=/etc/profile insertafter=EOF line="export SGE_ROOT={{ sge_root }}"
-- name: Source SGE settings in /etc/bash.bashrc
-  lineinfile: dest=/etc/bash.bashrc insertafter=EOF line=". $SGE_ROOT/default/common/settings.sh"
+# SLURM configuration
+- name: Setup galaxy user
+  user: name=galaxy comment="Galaxy user" uid=1001 state=present shell=/bin/bash
+- name: Setup munge user
+  user: name=munge state=present
+- name: Set permissions on /etc
+  file: path=/etc state=directory mode=0755
+- name: Create munge conf dir
+  file: path=/etc/munge state=directory
+- name: Put munge key in place
+  copy: src=mungekey dest=/etc/munge/munge.key owner=munge mode=0600
+- name: Modify hosts file for munge
+  lineinfile: "dest=/etc/hosts line='{{ ansible_eth0.ipv4.address }}    {{ ansible_hostname }}'"
+
+- name: Setup slurm user
+  user: name=slurm state=present
+- name: Setup slurm config dir
+  file: path=/etc/slurm-llnl state=directory mode=0755 owner=root group=root
+- name: Put slurm config file in place
+  template: src=slurm_conf.j2 dest=/etc/slurm-llnl/slurm.conf owner=slurm mode=0755
+
+#- name: Allow incoming traffic on port 536 and 537
+#  command: iptables -A INPUT -p tcp -i {{ private_interface }} --dport {{ item }} -j ACCEPT
+#  with_items:
+#    - 536
+#    - 537
+#- name: Save iptables config
+#  command: iptables-save
+#- name: Create libc softlink for SGE
+#  file: src=/lib/x86_64-linux-gnu/libc-2.15.so dest=/lib64/libc.so.6 state=link
+#- name: Remove certain lines in /etc/hosts
+#  lineinfile: dest=/etc/hosts regexp="^127.0.1." state=absent
+#- name: Add sge_root to /etc/profile
+#  lineinfile: dest=/etc/profile insertafter=EOF line="export SGE_ROOT={{ sge_root }}"
+#- name: Source SGE settings in /etc/bash.bashrc
+#  lineinfile: dest=/etc/bash.bashrc insertafter=EOF line=". $SGE_ROOT/default/common/settings.sh"
  
 - name: Fetch XSD for percolator
   get_url: url={{ local_source_mirror }}/{{ xsd_package }} dest=/tmp/{{ xsd_package }}
