--- a/adapt_cluster_provisioning/roles/core/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/core/vars/main.yml
@@ -13,6 +13,7 @@ build_packages:
 core_packages:
   - git-core
   - unzip
+  - slurm-llnl
   # Required for NFS
   - nfs-common
   # Enable OpenMPI, necessary on worker?
@@ -45,10 +46,16 @@ tool_python_libraries:
  - lxml
  - simplejson
 
+master_name: bruce
+compute_nodes:
+  - {name: koala, ip: 10.0.0.102, cpu: 1}
+  #- snail: {ip:10.0.0.104, CPU: ... #etcetera
+  #- tortoise: 10.0.0.105
+  #- sloth: 10.0.0.106
+
 mount_paths:
   - "{{ tool_path }}"
   - "{{ data_path }}"
-  - "{{ sge_root }}"
 
 local_pypi_mirror: http://{{ master_ip }}/pypi/simple/
 local_source_mirror: http://{{ master_ip }}/source
