Username should be admin for installation

--- a/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_masterprep_playbook.yml
@@ -5,7 +5,7 @@
 # ssh-copy-id on the admin key from master to worker/fileserver
 
 - hosts: master_public
-  user: jorrit
+  user: admin
   sudo: True
   vars_files: roles/core/vars/main.yml
   roles:
