SLURM config template, defined variables in odd place inventory/cluster_data because needs to be found easily by user, not hidden away in a role

--- a/adapt_cluster_provisioning/adapt_cluster_deployment_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_deployment_playbook.yml
@@ -10,10 +10,12 @@
     - update
     - fileserver
 
-# Install tool dependencies and mount volumes
+# Install tool dependencies, slurm, mount volumes
 - hosts:
   - master_private
   - workers
+  vars_files:
+    - inventory/cluster_data.yml
   user: admin
   sudo: true
   roles:
