--- a/adapt_cluster_provisioning/roles/master_preparation/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/master_preparation/tasks/main.yml
@@ -74,4 +74,11 @@
 - name: Get latest stable ansible scripts from github
   git: repo=git://github.com/glormph/proteomics_configuration
        dest=/home/admin/proteomics_configuration
+- name: Move hosts file to repo on host
+  copy: src=inventory/hosts
+        dest=/home/admin/proteomics_configuration/adapt_cluster_provisioning/inventory/hosts
+- name: Move clusterdata to repo on host
+  copy: src=inventory/cluster_data.yml
+        dest=/home/admin/proteomics_configuration/adapt_cluster_provisioning/inventory/cluster_data.yml
+
 
