--- a/adapt_cluster_provisioning/roles/worker/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/worker/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # Tasks for workers only
 
-- name: Mount data volume
+- name: Mount tool volume
   lineinfile: "dest=/etc/fstab 'line={{ tool_share }}     {{ tool_path }}  nfs auto    0   0'"
