--- a/adapt_cluster_provisioning/roles/master/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/master/vars/main.yml
@@ -17,3 +17,6 @@ master_packages:
   - default-jdk
   - python-rpy
   - xvfb
+
+slurm_drmaa_url: http://apps.man.poznan.pl/trac/slurm-drmaa/downloads/9
+slurm_drmaa_pkg: slurm-drmaa-1.0.7
