Install psycopg2 package on master for ansible

--- a/adapt_cluster_provisioning/roles/master/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/master/tasks/main.yml
@@ -9,6 +9,10 @@
   with_flattened:
     - ${master_packages}
 
+- name: Install python libraries
+  pip: name={{ item }} state=present
+  with_flattened: master_pip_pkgs
+
 # Slurm-drmaa
 - name: Get slurm-drmaa source
   get_url: url={{ slurm_drmaa_url }} dest=/tmp/slurm-drmaa.tar.gz
