--- a/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
@@ -41,6 +41,14 @@
 
 - name: Move init script from galaxy to /etc/init.d
   command: cp /home/galaxy/galaxy-central/contrib/galaxy.debian-init /etc/init.d/galaxy
+- name: Copy environment variable file for galaxy service
+  file: src=galaxy_env dest=/etc/default/galaxy
+- name: Source variables in init.d service file
+  lineinfile: line="[ -f /etc/default/galaxy ] && . /etc/default/galaxy"
+              dest=/etc/init.d/galaxy
+              insertbefore=BOF
+              state=present
+
 - name: Register galaxy init service
   service: name=galaxy enabled=yes
 
