--- a/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
@@ -43,6 +43,7 @@
   vars_files:
     - roles/master/vars/tools.yml
     - roles/core/vars/main.yml
+    - credentials/dbpass.yml
   sudo: true
   roles:
     - master
