--- a/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
@@ -57,7 +57,7 @@
               regexp="galaxy_dist"
               dest=/etc/init.d/galaxy
 - name: Copy environment variable file for galaxy service
-  file: src=galaxy_env dest=/etc/default/galaxy
+  copy: src=galaxy_env dest=/etc/default/galaxy
 - name: Source variables in init.d service file
   lineinfile: line="[ -f /etc/default/galaxy ] && . /etc/default/galaxy"
               dest=/etc/init.d/galaxy
