--- a/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_initializiation/tasks/main.yml
@@ -56,6 +56,10 @@
   lineinfile: line="DIR={{ galaxy_path }}"
               regexp="galaxy_dist"
               dest=/etc/init.d/galaxy
+- name: Change group init script runs under to galaxy
+  lineinfile: line='GROUP="galaxy"'
+              regexp="GROUP="
+              dest=/etc/init.d/galaxy
 - name: Copy environment variable file for galaxy service
   copy: src=galaxy_env dest=/etc/default/galaxy
 - name: Source variables in init.d service file
